backend/services/api-gateway/k8s-manifests/api-gateway-service.yaml
# filename: api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-internal
  # annotations:
  #   # This annotation links the service to the BackendConfig
  #   cloud.google.com/backend-config: '{"default": "api-gateway-backendconfig"}'
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
  - port: 80
    targetPort: 8080
